Challenge#1/vpc.tf
resource "aws_vpc" "main_vpc" {
    cidr_block = "10.0.0.0/16"
    tags {
        name = main_vpc
    }
}

resource "aws_subnet" "public_subnet" {
    vpc_id = aws_vpc.main_vpc.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "eu-west-1a"
}
